# AlgoLab

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: cross-platform.md  roadmap.md
examples/problems/1653/: meta.json  tests.json
examples/problems/two-sum/: meta.json  problem.md  starter.py  tests.json
