[package]
name = "lc-lab"
version = "0.1.0"
description = "A local coding practice desktop app."
authors = ["LC Lab"]
edition = "2021"

[lib]
name = "lc_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tempfile = "3"
wait-timeout = "0.2"
