[package]
name = "algolab"
version = "0.1.0"
description = "A local algorithm practice desktop app."
authors = ["AlgoLab"]
edition = "2021"

[lib]
name = "algolab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tempfile = "3"
wait-timeout = "0.2"
